@@ -1,3 +1,9 @@
+Fri Apr 08 18:32:17 CET 2016
+	Some minor internal fixes, addition error checking and
+	micro optimizations.
+	Reworked usage of sockets shutdown() - now work equally
+	on all platforms, disconnection should be "more graceful". -EG
+
 Tue Mar 15 21:52:27 CET 2016
 	Do not crash if pthread_create() fails. -DD
 
